--- a/DAY4/package.json
+++ b/DAY4/package.json
@@ -19,10 +19,14 @@
     "antd": "^5.9.4",
     "expo": "~49.0.13",
     "expo-status-bar": "~1.6.0",
+    "intl": "^1.2.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.11.0",
+    "react-intl": "^6.4.7",
     "react-native": "0.72.5",
+    "react-native-paper": "^5.10.6",
+    "react-native-safe-area-context": "^4.7.2",
     "react-native-web": "~0.19.6"
   },
   "devDependencies": {
