--- a/CalculatorApp/app.json
+++ b/CalculatorApp/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "USEREDUCE",
-    "slug": "USEREDUCE",
+    "name": "CalculatorApp",
+    "slug": "CalculatorApp",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
